--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Connexion</h1>
         <hr><br>
-        <form id="loginForm">
+        <form id="loginForm" action="https://page-de-connexion-html.vercel.app/api/login" method="POST">
             <div class="form-group">
                 <label for="username">Nom d'utilisateur :</label>
                 <input type="text" id="username" name="username" required>
