--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script>
         async function fetchUsers() {
             try {
-                const response = await fetch('http://localhost:3000/users'); // Assurez-vous que le port est correct
+                const response = await fetch('https://page-de-connexion-html.vercel.app/api/login'); // Assurez-vous que le port est correct
                 if (!response.ok) {
                     console.error(`Erreur lors de la récupération des utilisateurs: ${response.status}`);
                     return [];
