--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -44,7 +44,7 @@
         const errorDiv = document.getElementById('errorMessage');
 
         async function loadUsers() {
-            const response = await fetch('http://localhost:3000/users');
+            const response = await fetch('https://page-de-connexion-html.vercel.app/users');
             const users = await response.json();
             usersList.innerHTML = '';
             users.forEach(user => {
@@ -65,7 +65,7 @@
 
             const newUser = { username, password };
 
-            const response = await fetch('http://localhost:3000/users', {
+            const response = await fetch('https://page-de-connexion-html.vercel.app/users', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -86,7 +86,7 @@
         });
 
         async function deleteUser(usernameToDelete) {
-            const response = await fetch(`http://localhost:3000/users/${usernameToDelete}`, {
+            const response = await fetch(`https://page-de-connexion-html.vercel.app/users/${usernameToDelete}`, {
                 method: 'DELETE',
             });
 
