--- a/page_accueil.html
+++ b/page_accueil.html
@@ -104,7 +104,7 @@
     <script src="script.js"></script>
     <script>
         async function fetchUsers() {
-            const response = await fetch('http://localhost:3000/users');
+            const response = await fetch('https://page-de-connexion-html.vercel.app/users');
             const users = await response.json();
             return users;
         }
