--- a/index.html
+++ b/index.html
@@ -24,6 +24,52 @@
         </form>
     </div>
 
-    <script>script.js</script>
+    <script>
+        async function fetchUsers() {
+            try {
+                const response = await fetch('https://page-de-connexion-html.vercel.app/api/login'); // Assurez-vous que le port est correct
+                if (!response.ok) {
+                    console.error(`Erreur lors de la récupération des utilisateurs: ${response.status}`);
+                    return [];
+                }
+                const users = await response.json();
+                return users;
+            } catch (error) {
+                console.error("Erreur lors de la récupération des utilisateurs:", error);
+                return [];
+            }
+        }
+
+        async function verifyCredentials(username, password) {
+            const users = await fetchUsers();
+            return users.some(user =>
+                user.username.toLowerCase() === username.toLowerCase() && user.password === password
+            );
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const loginForm = document.getElementById('loginForm');
+            const errorMessage = document.getElementById('errorMessage');
+
+            loginForm.addEventListener('submit', async function(event) {
+                event.preventDefault();
+
+                const usernameInput = document.getElementById('username');
+                const passwordInput = document.getElementById('password');
+                const username = usernameInput.value.trim();
+                const password = passwordInput.value.trim();
+
+                errorMessage.textContent = '';
+
+                if (await verifyCredentials(username, password)) {
+                    localStorage.setItem('username', username);
+                    localStorage.setItem('password', password);
+                    window.location.href = 'page_accueil.html';
+                } else {
+                    errorMessage.textContent = 'Nom d\'utilisateur et/ou mot de passe incorrect(s).';
+                }
+            });
+        });
+    </script>
 </body>
 </html>
