--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -1,107 +1,107 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestion des Utilisateurs</title>
-    <style>
-        body { font-family: sans-serif; }
-        #addUserForm label { display: block; margin-bottom: 5px; }
-        #userListContainer { margin-top: 20px; border: 1px solid #ccc; padding: 10px; }
-        #userListContainer h2 { margin-top: 0; }
-        #userList { list-style-type: none; padding: 0; }
-        #userList li { padding: 8px 0; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; }
-        #userList li:last-child { border-bottom: none; }
-        #userList li button { background-color: #dc3545; color: white; padding: 5px 10px; font-size: 14px; cursor: pointer; }
-        #message, #errorMessage { text-align: center; margin-top: 10px; font-weight: bold; }
-        #message { color: green; }
-        #errorMessage { color: red; }
-    </style>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Gestion des Utilisateurs</title>
+      <style>
+          body { font-family: sans-serif; }
+          #addUserForm label { display: block; margin-bottom: 5px; }
+          #userListContainer { margin-top: 20px; border: 1px solid #ccc; padding: 10px; }
+          #userListContainer h2 { margin-top: 0; }
+          #userList { list-style-type: none; padding: 0; }
+          #userList li { padding: 8px 0; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; }
+          #userList li:last-child { border-bottom: none; }
+          #userList li button { background-color: #dc3545; color: white; padding: 5px 10px; font-size: 14px; cursor: pointer; }
+          #message, #errorMessage { text-align: center; margin-top: 10px; font-weight: bold; }
+          #message { color: green; }
+          #errorMessage { color: red; }
+      </style>
 </head>
 <body>
-    <h1>Gestion des Utilisateurs</h1>
+      <h1>Gestion des Utilisateurs</h1>
 
-    <form id="addUserForm">
-        <h2>Ajouter un utilisateur</h2>
-        <label for="username">Nom d'utilisateur:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Mot de passe:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Ajouter</button>
-        <div id="message"></div>
-        <div id="errorMessage"></div>
-    </form>
+      <form id="addUserForm">
+          <h2>Ajouter un utilisateur</h2>
+          <label for="username">Nom d'utilisateur:</label>
+          <input type="text" id="username" name="username" required><br><br>
+          <label for="password">Mot de passe:</label>
+          <input type="password" id="password" name="password" required><br><br>
+          <button type="submit">Ajouter</button>
+          <div id="message"></div>
+          <div id="errorMessage"></div>
+      </form>
 
-    <div id="userListContainer">
-        <h2>Liste des utilisateurs</h2>
-        <ul id="userList"></ul>
-    </div>
+      <div id="userListContainer">
+          <h2>Liste des utilisateurs</h2>
+          <ul id="userList"></ul>
+      </div>
 
-    <script>
-        const addUserForm = document.getElementById('addUserForm');
-        const usersList = document.getElementById('userList');
-        const messageDiv = document.getElementById('message');
-        const errorDiv = document.getElementById('errorMessage');
+      <script>
+          const addUserForm = document.getElementById('addUserForm');
+          const usersList = document.getElementById('userList');
+          const messageDiv = document.getElementById('message');
+          const errorDiv = document.getElementById('errorMessage');
 
-        async function loadUsers() {
-            const response = await fetch('https://page-de-connexion-html.vercel.app/users');
-            const users = await response.json();
-            usersList.innerHTML = '';
-            users.forEach(user => {
-                const li = document.createElement('li');
-                li.textContent = `Nom d'utilisateur: ${user.username} `;
-                const deleteButton = document.createElement('button');
-                deleteButton.textContent = 'Supprimer';
-                deleteButton.onclick = () => deleteUser(user.username);
-                li.appendChild(deleteButton);
-                usersList.appendChild(li);
-            });
-        }
+          async function loadUsers() {
+              const response = await fetch('/api/users'); // Assuming you'll create this Vercel function
+              const users = await response.json();
+              usersList.innerHTML = '';
+              users.forEach(user => {
+                  const li = document.createElement('li');
+                  li.textContent = `Nom d'utilisateur: ${user.username} `;
+                  const deleteButton = document.createElement('button');
+                  deleteButton.textContent = 'Supprimer';
+                  deleteButton.onclick = () => deleteUser(user.username);
+                  li.appendChild(deleteButton);
+                  usersList.appendChild(li);
+              });
+          }
 
-        addUserForm.addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+          addUserForm.addEventListener('submit', async (event) => {
+              event.preventDefault();
+              const username = document.getElementById('username').value;
+              const password = document.getElementById('password').value;
 
-            const newUser = { username, password };
+              const newUser = { username, password };
 
-            const response = await fetch('https://page-de-connexion-html.vercel.app/users', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(newUser),
-            });
+              const response = await fetch('/api/users', { // Assuming you'll create this Vercel function
+                  method: 'POST',
+                  headers: {
+                      'Content-Type': 'application/json',
+                  },
+                  body: JSON.stringify(newUser),
+              });
 
-            const result = await response.json();
-            if (response.ok) {
-                messageDiv.textContent = result.message;
-                errorDiv.textContent = '';
-                addUserForm.reset();
-                loadUsers();
-            } else {
-                errorDiv.textContent = result.error || 'Erreur lors de l\'ajout de l\'utilisateur.';
-                messageDiv.textContent = '';
-            }
-        });
+              const result = await response.json();
+              if (response.ok) {
+                  messageDiv.textContent = result.message;
+                  errorDiv.textContent = '';
+                  addUserForm.reset();
+                  loadUsers();
+              } else {
+                  errorDiv.textContent = result.error || 'Erreur lors de l\'ajout de l\'utilisateur.';
+                  messageDiv.textContent = '';
+              }
+          });
 
-        async function deleteUser(usernameToDelete) {
-            const response = await fetch(`https://page-de-connexion-html.vercel.app/users/${usernameToDelete}`, {
-                method: 'DELETE',
-            });
+          async function deleteUser(usernameToDelete) {
+              const response = await fetch(`/api/users/${usernameToDelete}`, { // Assuming you'll create this Vercel function
+                  method: 'DELETE',
+              });
 
-            const result = await response.json();
-            if (response.ok) {
-                messageDiv.textContent = result.message;
-                errorDiv.textContent = '';
-                loadUsers();
-            } else {
-                errorDiv.textContent = result.error || `Erreur lors de la suppression de l'utilisateur "${usernameToDelete}".`;
-                messageDiv.textContent = '';
-            }
-        }
+              const result = await response.json();
+              if (response.ok) {
+                  messageDiv.textContent = result.message;
+                  errorDiv.textContent = '';
+                  loadUsers();
+              } else {
+                  errorDiv.textContent = result.error || `Erreur lors de la suppression de l'utilisateur "${usernameToDelete}".`;
+                  messageDiv.textContent = '';
+              }
+          }
 
-        loadUsers(); // Charger la liste des utilisateurs au démarrage
-    </script>
+          // loadUsers(); // Commented out as the backend for /api/users doesn't exist yet
+      </script>
 </body>
 </html>
