--- a/index.html
+++ b/index.html
@@ -1,75 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Connexion</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Connexion</h1>
-        <hr><br>
-        <form id="loginForm" action="https://page-de-connexion-html.vercel.app/api/login" method="POST">
-            <div class="form-group">
-                <label for="username">Nom d'utilisateur :</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de passe :</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn-primary">Se connecter</button>
-            <div id="errorMessage" class="error-message"></div>
-        </form>
-    </div>
+    <div class="container" id="loginContainer">
+        <h1>Connexion</h1>
+        <hr><br>
+        <form id="loginForm" action="https://page-de-connexion-html.vercel.app/api/login" method="POST">
+            <div class="form-group">
+                <label for="username">Nom d'utilisateur :</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Mot de passe :</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn-primary">Se connecter</button>
+            <div id="errorMessage" class="error-message"></div>
+        </form>
+    </div>
 
-    <script>
-        async function fetchUsers() {
-            try {
-                const response = await fetch('https://page-de-connexion-html.vercel.app/api/login'); // Assurez-vous que le port est correct
-                if (!response.ok) {
-                    console.error(`Erreur lors de la récupération des utilisateurs: ${response.status}`);
-                    return [];
-                }
-                const users = await response.json();
-                return users;
-            } catch (error) {
-                console.error("Erreur lors de la récupération des utilisateurs:", error);
-                return [];
-            }
-        }
-
-        async function verifyCredentials(username, password) {
-            const users = await fetchUsers();
-            return users.some(user =>
-                user.username.toLowerCase() === username.toLowerCase() && user.password === password
-            );
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-            const loginForm = document.getElementById('loginForm');
-            const errorMessage = document.getElementById('errorMessage');
-
-            loginForm.addEventListener('submit', async function(event) {
-                event.preventDefault();
-
-                const usernameInput = document.getElementById('username');
-                const passwordInput = document.getElementById('password');
-                const username = usernameInput.value.trim();
-                const password = passwordInput.value.trim();
-
-                errorMessage.textContent = '';
-
-                if (await verifyCredentials(username, password)) {
-                    localStorage.setItem('username', username);
-                    localStorage.setItem('password', password);
-                    window.location.href = 'page_accueil.html';
-                } else {
-                    errorMessage.textContent = 'Nom d\'utilisateur et/ou mot de passe incorrect(s).';
-                }
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
