--- a/page_accueil.html
+++ b/page_accueil.html
@@ -1,167 +1,66 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'accueil</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page d'accueil</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
 
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
-            text-align: center;
-        }
+        .container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
 
-        h1 {
-            color: #333;
-            margin-bottom: 20px;
-        }
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+        }
 
-        .form-group {
-            margin-bottom: 15px;
-            text-align: left;
-        }
+        p {
+            color: #666;
+            margin-bottom: 30px;
+        }
 
-        label {
-            display: block;
-            margin-bottom: 5px;
-            color: #555;
-            font-weight: bold;
-        }
+        #logoutBtn {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-        input[type="text"],
-        input[type="password"] {
-            width: calc(100% - 12px);
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            font-size: 16px;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-
-        .error-message {
-            color: red;
-            margin-top: 10px;
-            font-size: 0.9em;
-        }
-
-        .hidden {
-            display: none;
-        }
-    </style>
+        #logoutBtn:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <div class="container" id="loginContainer">
-        <h1>Connexion</h1>
-        <hr><br>
-        <form id="loginForm">
-            <div class="form-group">
-                <label for="username">Nom d'utilisateur :</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de passe :</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn-primary">Se connecter</button>
-            <div id="errorMessage" class="error-message"></div>
-        </form>
-    </div>
+    <div class="container">
+        <h1>Bienvenue !</h1>
+        <p>Vous êtes connecté.</p>
+        <button id="logoutBtn">Se déconnecter</button>
+    </div>
 
-    <div class="container hidden" id="accueilContainer">
-        <h1>Bienvenue sur la page d'accueil !</h1>
-        <p>Contenu protégé (simulé).</p>
-        <button id="logoutBtn">Se déconnecter</button>
-    </div>
-
-    <script src="script.js"></script>
-    <script>
-        async function fetchUsers() {
-            const response = await fetch('https://page-de-connexion-html.vercel.app/users');
-            const users = await response.json();
-            return users;
-        }
-
-        async function verifyCredentials(username, password) {
-            const users = await fetchUsers();
-            return users.some(user =>
-                user.username.toLowerCase() === username.toLowerCase() && user.password === password
-            );
-        }
-
-        document.addEventListener('DOMContentLoaded', async function() {
-            const loginContainer = document.getElementById('loginContainer');
-            const accueilContainer = document.getElementById('accueilContainer');
-            const loginFormAccueil = document.getElementById('loginForm');
-            const errorMessageAccueil = document.getElementById('errorMessage');
-            const logoutBtnAccueil = document.getElementById('logoutBtn');
-
-            const storedUsername = localStorage.getItem('username');
-            const storedPassword = localStorage.getItem('password');
-
-            if (storedUsername && storedPassword) {
-                loginContainer.classList.add('hidden');
-                accueilContainer.classList.remove('hidden');
-            } else {
-                loginContainer.classList.remove('hidden');
-                accueilContainer.classList.add('hidden');
-
-                loginFormAccueil.addEventListener('submit', async function(event) {
-                    event.preventDefault();
-
-                    const usernameInput = document.getElementById('username');
-                    const passwordInput = document.getElementById('password');
-                    const username = usernameInput.value.trim();
-                    const password = passwordInput.value.trim();
-
-                    errorMessageAccueil.textContent = '';
-
-                    if (await verifyCredentials(username, password)) {
-                        localStorage.setItem('username', username);
-                        localStorage.setItem('password', password);
-                        loginContainer.classList.add('hidden');
-                        accueilContainer.classList.remove('hidden');
-                    } else {
-                        errorMessageAccueil.textContent = 'Nom d\'utilisateur et/ou mot de passe incorrect(s).';
-                    }
-                });
-            }
-
-            if (logoutBtnAccueil) {
-                logoutBtnAccueil.addEventListener('click', function() {
-                    localStorage.removeItem('username');
-                    localStorage.removeItem('password');
-                    window.location.reload();
-                });
-            }
-        });
-    </script>
+    <script>
+        document.getElementById('logoutBtn').addEventListener('click', function() {
+            localStorage.removeItem('username');
+            window.location.href = 'index.html';
+        });
+    </script>
 </body>
 </html>
