--- a/page_accueil.html
+++ b/page_accueil.html
@@ -57,9 +57,16 @@
     </div>
 
     <script>
-        document.getElementById('logoutBtn').addEventListener('click', function() {
-            localStorage.removeItem('username');
-            window.location.href = 'index.html';
+        document.addEventListener('DOMContentLoaded', function() {
+            const username = localStorage.getItem('username');
+            if (!username) {
+                window.location.href = 'index.html';
+            }
+
+            document.getElementById('logoutBtn').addEventListener('click', function() {
+                localStorage.removeItem('username');
+                window.location.href = 'index.html';
+            });
         });
     </script>
 </body>
