--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -44,64 +44,84 @@
     const errorDiv = document.getElementById('errorMessage');
 
     async function loadUsers() {
-    const response = await fetch('/api/users'); // Assuming you'll create this Vercel function
-    const users = await response.json();
-    usersList.innerHTML = '';
-    users.forEach(user => {
-      const li = document.createElement('li');
-      li.textContent = `Nom d'utilisateur: ${user.username} `;
-      const deleteButton = document.createElement('button');
-      deleteButton.textContent = 'Supprimer';
-      deleteButton.onclick = () => deleteUser(user.username);
-      li.appendChild(deleteButton);
-      usersList.appendChild(li);
-    });
+      try {
+        const response = await fetch('/api/users');
+        if (!response.ok) {
+          console.error(`Erreur lors de la récupération des utilisateurs: ${response.status}`);
+          errorDiv.textContent = 'Erreur lors du chargement des utilisateurs.';
+          return;
+        }
+        const users = await response.json();
+        usersList.innerHTML = '';
+        users.forEach(user => {
+          const li = document.createElement('li');
+          li.textContent = `Nom d'utilisateur: ${user.username} `;
+          const deleteButton = document.createElement('button');
+          deleteButton.textContent = 'Supprimer';
+          deleteButton.onclick = () => deleteUser(user.username);
+          li.appendChild(deleteButton);
+          usersList.appendChild(li);
+        });
+      } catch (error) {
+        console.error("Erreur lors du chargement des utilisateurs:", error);
+        errorDiv.textContent = 'Erreur lors du chargement des utilisateurs.';
+      }
     }
 
     addUserForm.addEventListener('submit', async (event) => {
-    event.preventDefault();
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
+      event.preventDefault();
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
 
-    const newUser = { username, password };
+      const newUser = { username, password };
 
-    const response = await fetch('/api/users', { // Assuming you'll create this Vercel function
-      method: 'POST',
-      headers: {
-      'Content-Type': 'application/json',
-      },
-      body: JSON.stringify(newUser),
-    });
+      try {
+        const response = await fetch('/api/users', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(newUser),
+        });
 
-    const result = await response.json();
-    if (response.ok) {
-      messageDiv.textContent = result.message;
-      errorDiv.textContent = '';
-      addUserForm.reset();
-      loadUsers();
-    } else {
-      errorDiv.textContent = result.error || 'Erreur lors de l\'ajout de l\'utilisateur.';
-      messageDiv.textContent = '';
-    }
+        const result = await response.json();
+        if (response.ok) {
+          messageDiv.textContent = result.message;
+          errorDiv.textContent = '';
+          addUserForm.reset();
+          loadUsers();
+        } else {
+          errorDiv.textContent = result.error || 'Erreur lors de l\'ajout de l\'utilisateur.';
+          messageDiv.textContent = '';
+        }
+      } catch (error) {
+        console.error("Erreur lors de l'ajout de l'utilisateur:", error);
+        errorDiv.textContent = 'Erreur lors de l\'ajout de l\'utilisateur.';
+      }
     });
 
     async function deleteUser(usernameToDelete) {
-    const response = await fetch(`/api/users/${usernameToDelete}`, { // Assuming you'll create this Vercel function
-      method: 'DELETE',
-    });
+      try {
+        const response = await fetch(`/api/users/${usernameToDelete}`, {
+          method: 'DELETE',
+        });
 
-    const result = await response.json();
-    if (response.ok) {
-      messageDiv.textContent = result.message;
-      errorDiv.textContent = '';
-      loadUsers();
-    } else {
-      errorDiv.textContent = result.error || `Erreur lors de la suppression de l'utilisateur "${usernameToDelete}".`;
-      messageDiv.textContent = '';
-    }
+        const result = await response.json();
+        if (response.ok) {
+          messageDiv.textContent = result.message;
+          errorDiv.textContent = '';
+          loadUsers();
+        } else {
+          errorDiv.textContent = result.error || `Erreur lors de la suppression de l'utilisateur "${usernameToDelete}".`;
+          messageDiv.textContent = '';
+        }
+      } catch (error) {
+        console.error(`Erreur lors de la suppression de l'utilisateur "${usernameToDelete}:`, error);
+        errorDiv.textContent = `Erreur lors de la suppression de l'utilisateur "${usernameToDelete}".`;
+      }
     }
 
-    // loadUsers(); // Commented out as the backend for /api/users doesn't exist yet
+    loadUsers();
   </script>
 </body>
 </html>
