--- a/page_accueil.html
+++ b/page_accueil.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h1 id="welcomeMessage">Bienvenue !</h1>
-        <p><a href="index.html">Se déconnecter</a></p>
+        <button><a href="index.html">Se déconnecter</a></button>
     </div>
 
     <script>
