--- a/page_accueil.html
+++ b/page_accueil.html
@@ -10,6 +10,7 @@
         h1 { text-align: center; }
         p { text-align: center; }
         a { display: block; margin-top: 20px; text-align: center; }
+        button { text-align:center; }
     </style>
 </head>
 <body>
