--- a/page_accueil.html
+++ b/page_accueil.html
@@ -10,13 +10,12 @@
         h1 { text-align: center; }
         p { text-align: center; }
         a { display: block; margin-top: 20px; text-align: center; }
-        button { text-align:center; }
     </style>
 </head>
 <body>
     <div class="container">
         <h1 id="welcomeMessage">Bienvenue !</h1>
-        <button><a href="index.html">Se déconnecter</a></button>
+        <p><a href="index.html">Se déconnecter</a></p>
     </div>
 
     <script>
