--- a/page_accueil.html
+++ b/page_accueil.html
@@ -19,6 +19,7 @@
         <h1 id="welcomeMessage">Bienvenue !</h1>
         <p><a href="gestion_utilisateurs.html">Gestion des Utilisateurs</a></p>
         <p><a href="./inventory/inventory.html">Inventaire</a></p>
+        <p><a href="./trombinoscope/trombinoscope.html">Trombinoscope</a></p>
         <a href="./messaging/messaging.html" class="new-tab-link" target="_blank">Messagerie Instantanée</a>
         <button id="logoutButton">Se déconnecter</button>
     </div>
