--- a/trombinoscope/trombinoscope.html
+++ b/trombinoscope/trombinoscope.html
@@ -155,5 +155,42 @@
             </div>
         </div>
     </div>
+    <script>
+        async function displayWelcomeMessage() {
+            const username = localStorage.getItem('username');
+
+            if (username) {
+                try {
+                    const response = await fetch(`/api/users?username=${username}`);
+                    if (response.ok) {
+                        const user = await response.json();
+                        if (user && user.prenom) {
+                            document.getElementById('welcomeMessage').textContent = `Bienvenue, ${user.prenom} !`;
+                        } else {
+                            document.getElementById('welcomeMessage').textContent = `Bienvenue, ${username} !`;
+                        }
+                    } else {
+                        console.error("Erreur lors de la récupération des détails de l'utilisateur");
+                        document.getElementById('welcomeMessage').textContent = `Bienvenue, ${username} !`;
+                    }
+                } catch (error) {
+                    console.error("Erreur lors de la communication avec l'API:", error);
+                    document.getElementById('welcomeMessage').textContent = `Bienvenue !`;
+                }
+            } else {
+                window.location.href = 'index.html'; // Rediriger si non connecté
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', displayWelcomeMessage);
+
+        const logoutButton = document.getElementById('logoutButton');
+        logoutButton.addEventListener('click', logout);
+
+        function logout() {
+            localStorage.removeItem('username');
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
